@@ -1,3 +1,9 @@
+Wed Feb 10 10:45:00 UTC 2010  Simon Massey  <sma at prismtech dot com>
+
+        * tests/NonBlocking_Conn_Test.h:
+        * tests/NonBlocking_Conn_Test.cpp:
+          Fixed a VC9 compilation error (IGNORE is a vc9 #define).
+
 Tue Feb  9 15:03:35 UTC 2010  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>
 
         * tests/NonBlocking_Conn_Test.cpp (hosts): Updated the list of hosts to 
